# sidegps

./: .gitignore  README.md
.github/workflows/: deploy.yml  update-gtfs.yml
backend/: Dockerfile  gtfs_loader.py  main.py  pyproject.toml  requirements.txt  startup.sh
backend/.azure/: config
backend/data/: gtfs_lite.db
backend/static/: app.js  index.html  style.css  sw.js
frontend/: app.js  index.html  manifest.json  style.css
